--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,13 +3,30 @@
 
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-                EJS Is Fun
+                <!--<span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>-->
+                Єдиний реєстр приватних виконавців
             </a>
 
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/">Дім</a></li>
+
+                <% if(role === 0){ %>
+                    <li><a href="/login">Зайти в систему</a></li>
+                <% } %>
+
+                <% if(role === 0){ %>
+                    <li><a href="/login">Зайти в систему</a></li>
+                <% } %>
+
+                <% if(role === 0){ %>
+                    <li><a href="/login">Зайти в систему</a></li>
+                <% } %>
+                
+                <% if(role === 0){ %>
+                    <li><a href="/login">Зайти в систему</a></li>
+                <% }else{ %>
+                    <li><a href="/logout">Вийти</a></li>
+                <% %>
             </ul>
         </div>
 
