Finished everything except EJ and documents

--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -64,7 +64,7 @@
 
 					    			if(name!="") url+='fullname='+name+'&';
 					    			if(certivicate_num!="") url+='certificate_num='+certivicate_num+'&';
-									if(activity_val!="") url+='is_active='+(activity_val === 1)+'&';
+									if(activity_val!="") url+='is_active='+(activity_val == 1)+'&';
 									if(district_val!="") url+='district_id='+district_val+'&';
 
 					    			window.location.href = url;
