--- a/views/pages/event-journal.ejs
+++ b/views/pages/event-journal.ejs
@@ -26,7 +26,7 @@
           <% events.forEach(event =>{%>
           <tr>
             <td><%= event.event_date %></td>
-            <td><%= event.user.login" %></td>
+            <td><%= event.user.login %></td>
             <td>
               Подія: <%= EventTypes[event.event_number] %><br>
               Джерело події: <%= event.row_affected %><br>
