--- a/views/pages/registrator-edit.ejs
+++ b/views/pages/registrator-edit.ejs
@@ -16,6 +16,12 @@
 			<div class="panel panel-default">
 				<div class="panel-body">
 				    <form>
+				       <div class="form-group">
+					    Login: <%= oldUserVal.login %>
+					  </div>
+					  <div class="form-group">
+					    Password: <%= oldUserVal.pwd_hash %>
+					  </div>
 					  <div class="form-group">
 					    <label for="inputName" class="col-sm-2 col-form-label">П.І.Б</label>
 					    <div class="col-sm-10">
